--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,9 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 @plugin "daisyui";
 
+@plugin "daisyui/theme" {
+  name: 'car-doctor-light';
+  default: true;
+  --color-primary: #ff3811;
+  --color-secondary: teal;
+}
